--- a/guide.html
+++ b/guide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Leonardo Sartori</title>
+    <title>Musicme</title>
     <meta charset="UTF-8" />
     <link
       rel="stylesheet"
@@ -98,7 +98,7 @@
         stringa +=
           "Ex.: <code>" +
           url +
-          "?track=<i>[trackName]&artist=<i>[artistName]</i>";
+          "?track=<i>[trackName]</i>&artist=<i>[artistName]</i>";
         return stringa;
       }
     </script>
