--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Leonardo Sartori</title>
+    <title>Musicme</title>
     <meta charset="UTF-8" />
     <link
       rel="stylesheet"
@@ -56,7 +56,7 @@
           </a>
           <a
             class="btn btn-social-icon btn-github"
-            href="https://github.com/Leonardo-sartori34"
+            href="https://github.com/leonardsartori-web"
           >
             <span class="fa fa-github"></span>
           </a>
