--- a/guide.html
+++ b/guide.html
@@ -47,13 +47,6 @@
       document.getElementById("submit").addEventListener("click", function () {
         createUrl();
       });
-      window.onload = function () {
-        var script = document.createElement("script");
-        script.src =
-          "//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit";
-        document.head.appendChild(script);
-        googleTranslateElementInit();
-      };
 
       function createUrl() {
         var url = window.location.href.split("guide.html")[0] + "?";
@@ -95,12 +88,12 @@
           "?track=<i>[trackName]</i>&artist=<i>[artistName]</i>";
         return stringa;
       }
-      function googleTranslateElementInit() {
-        new google.translate.TranslateElement(
-          { pageLanguage: "it" },
-          "google_translate_element"
-        );
-      }
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script
+      type="text/javascript"
+      src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+    ></script>
+    <script src="src/guide.js"></script>
   </body>
 </html>
