--- a/guide.html
+++ b/guide.html
@@ -33,7 +33,7 @@
             <label for="album">album</label>
             <input type="text" id="albumIn" name="album" /><br />
             <button class="types" id="submit">Submit</button><br />
-            <span id="urlResult"></span>
+            <span id="urlResult" class="notraslate"></span>
           </div>
         </div>
         <div id="google_translate_element" class="translateBtn"></div>
