--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </a>
           <a
             class="btn btn-social-icon btn-github"
-            href="https://github.com/leonardsartori-web"
+            href="https://github.com/leonardosartori-web"
           >
             <span class="fa fa-github"></span>
           </a>
