--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             <span class="fa fa-github"></span>
           </a>
         </div>
-        <span><i>Leonardo Sartori</i></span>
+        <span class="develop">Developed by<br /></span>
+        <span>Leonardo Sartori</span>
       </div>
     </div>
 
