--- a/guide.html
+++ b/guide.html
@@ -12,7 +12,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css"
     />
     <link rel="stylesheet" href="src/styles.css" />
-    <link id="favicon" rel="icon" type="image/png" sizes="16x16" />
+    <link
+      id="favicon"
+      src="https://i.ibb.co/c8nsw0v/logo-large.png"
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+    />
   </head>
   <body>
     <div id="main">
