--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css"
     />
-    <link id="favicon" rel="icon" type="image/png" sizes="16x16" />
+    <link
+      id="favicon"
+      src="https://i.ibb.co/c8nsw0v/logo-large.png"
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+    />
   </head>
   <body>
     <div id="mySidenav" class="sidenav">
@@ -65,11 +71,11 @@
         <span>Leonardo Sartori</span>
       </div>
     </div>
-
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer;" id="openNav"
-        >&#9776;</span
-      >
+      <span style="font-size: 30px; cursor: pointer;" id="openNav">&#9776;</span
+      ><span id="spotMessage">
+        Promuovi la tua musica con <b>Musicme Smart URLs</b>.
+      </span>
       <div class="center" id="center">
         <h1>
           <h2 id="h1">Inserire dati validi</h2>
