--- a/guide.html
+++ b/guide.html
@@ -13,8 +13,7 @@
     />
     <link rel="stylesheet" href="src/styles.css" />
     <link
-      id="favicon"
-      src="https://i.ibb.co/c8nsw0v/logo-large.png"
+      href="https://i.ibb.co/c8nsw0v/logo-large.png"
       rel="icon"
       type="image/png"
       sizes="16x16"
