--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link
       id="favicon"
-      src="https://i.ibb.co/c8nsw0v/logo-large.png"
+      href="https://i.ibb.co/c8nsw0v/logo-large.png"
       rel="icon"
       type="image/png"
       sizes="16x16"
