--- a/index.html
+++ b/index.html
@@ -72,10 +72,19 @@
       </div>
     </div>
     <div id="main">
-      <span style="font-size: 30px; cursor: pointer;" id="openNav">&#9776;</span
-      ><span id="spotMessage">
-        Promuovi la tua musica con <b>Musicme Smart URLs</b>.
-      </span>
+      <span style="font-size: 30px; cursor: pointer;" id="openNav"
+        >&#9776;</span
+      >
+      <img
+        src="https://i.ibb.co/c8nsw0v/logo-large.png"
+        alt="Logo"
+        class="logo"
+      />
+      <div>
+        <span id="spotMessage">
+          Promuovi la tua musica con <b>Musicme Smart URLs</b>.
+        </span>
+      </div>
       <div class="center" id="center">
         <h1>
           <h2 id="h1">Inserire dati validi</h2>
