--- a/guide.html
+++ b/guide.html
@@ -30,18 +30,18 @@
             <h2 id="h1">Linee guida</h2>
           </h1>
           <span id="guideline"></span>
-          <div id="inputs" class="notraslate">
+          <div id="inputs">
             <span
               ><br /><b>Crea il tuo Smart Url personalizzato:</b><br
             /></span>
-            <label for="track">track</label>
+            <label for="track" class="notranslate">track</label>
             <input type="text" id="trackIn" name="track" /><br />
-            <label for="artist">artist</label>
+            <label for="artist" class="notranslate">artist</label>
             <input type="text" id="artistIn" name="artist" /><br />
-            <label for="album">album</label>
+            <label for="album" class="notranslate">album</label>
             <input type="text" id="albumIn" name="album" /><br />
             <button class="types" id="submit">Submit</button><br />
-            <span id="urlResult" class="notraslate"></span>
+            <span id="urlResult" class="notranslate"></span>
           </div>
         </div>
         <div id="google_translate_element" class="translateBtn"></div>
