--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         alt="Logo"
         class="logo"
       />
-      <div>
+      <div id="spotMessage">
         <span id="spotMessage">
           Promuovi la tua musica con <b>Musicme Smart URLs</b>.
         </span>
