--- a/guide.html
+++ b/guide.html
@@ -24,6 +24,11 @@
       <span style="font-size: 30px; cursor: pointer;" id="back"
         >&#60;<a href="/index.html" id="backBtn"></a
       ></span>
+      <img
+        src="https://i.ibb.co/c8nsw0v/logo-large.png"
+        alt="Logo"
+        class="logo"
+      />
       <div>
         <div class="center" style="width: 70%;">
           <h1>
