--- a/guide.html
+++ b/guide.html
@@ -22,7 +22,7 @@
   <body>
     <div id="main">
       <span style="font-size: 30px; cursor: pointer;" id="back"
-        >&#60;<a href="/index.html" id="backBtn"></a
+        >&#60;<a href="/" id="backBtn"></a
       ></span>
       <img
         src="https://i.ibb.co/c8nsw0v/logo-large.png"
