--- a/index.html
+++ b/index.html
@@ -81,9 +81,7 @@
         class="logo"
       />
       <div id="spotMessage">
-        <span id="spotMessage">
-          Promuovi la tua musica con <b>Musicme Smart URLs</b>.
-        </span>
+        <span> Promuovi la tua musica con <b>Musicme Smart URLs</b>. </span>
       </div>
       <div class="center" id="center">
         <h1>
