--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     />
   </head>
   <body>
+    <div id="loading">
+      <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+      <lord-icon
+        src="https://cdn.lordicon.com/dpinvufc.json"
+        trigger="loop"
+        colors="primary:#a6a6a6,secondary:#08a88a"
+        style="width: 128px; height: 128px;"
+        id="loading-image"
+      >
+      </lord-icon>
+    </div>
     <div id="mySidenav" class="sidenav">
       <a href="javascript:void(0)" class="closebtn" id="closeNav">&times;</a>
       <button class="types" id="shareBtn">
