--- a/index.html
+++ b/index.html
@@ -31,88 +31,89 @@
       >
       </lord-icon>
     </div>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" id="closeNav">&times;</a>
-      <button class="types" id="shareBtn">
-        Condividi
-        <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-        <lord-icon
-          src="https://cdn.lordicon.com/udwhdpod.json"
-          trigger="loop-on-hover"
-          colors="primary:#ffffff,secondary:#08a88a"
-          style="width: 32px; height: 32px;"
-        >
-        </lord-icon>
-      </button>
-      <button class="types" id="embedBtn">
-        Embed
-        <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
-        <lord-icon
-          src="https://cdn.lordicon.com/dtgezzsi.json"
-          trigger="loop-on-hover"
-          colors="primary:#ffffff,secondary:#08a88a"
-          style="width: 32px; height: 32px;"
-        >
-        </lord-icon>
-      </button>
-      <div class="alert-div">Copied!</div>
-      <div id="footer">
-        <div id="foot">
-          <a
-            class="btn btn-social-icon btn-instagram"
-            href="https://www.instagram.com/_leonardo.sartori_/"
-            style="background-color: transparent;"
+    <div id="body">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" id="closeNav">&times;</a>
+        <button class="types" id="shareBtn">
+          Condividi
+          <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+          <lord-icon
+            src="https://cdn.lordicon.com/udwhdpod.json"
+            trigger="loop-on-hover"
+            colors="primary:#ffffff,secondary:#08a88a"
+            style="width: 32px; height: 32px;"
           >
-            <span class="fa fa-instagram" id="insta"></span>
-          </a>
-          <a
-            class="btn btn-social-icon btn-facebook"
-            href="https://facebook.com/leonardosartori34"
+          </lord-icon>
+        </button>
+        <button class="types" id="embedBtn">
+          Embed
+          <script src="https://cdn.lordicon.com/libs/mssddfmo/lord-icon-2.1.0.js"></script>
+          <lord-icon
+            src="https://cdn.lordicon.com/dtgezzsi.json"
+            trigger="loop-on-hover"
+            colors="primary:#ffffff,secondary:#08a88a"
+            style="width: 32px; height: 32px;"
           >
-            <span class="fa fa-facebook"></span>
-          </a>
-          <a
-            class="btn btn-social-icon btn-github"
-            href="https://github.com/leonardosartori-web"
-          >
-            <span class="fa fa-github"></span>
-          </a>
-        </div>
-        <span class="develop">Developed by<br /></span>
-        <span>Leonardo Sartori</span>
-      </div>
-    </div>
-    <div id="main">
-      <span style="font-size: 30px; cursor: pointer;" id="openNav"
-        >&#9776;</span
-      >
-      <img
-        src="https://i.ibb.co/c8nsw0v/logo-large.png"
-        alt="Logo"
-        class="logo"
-      />
-      <div id="spotMessage">
-        <span> Promuovi la tua musica con <b>Musicme Smart URLs</b>. </span>
-      </div>
-      <div class="center" id="center">
-        <h1>
-          <h2 id="h1">Inserire dati validi</h2>
-        </h1>
-        <div style="visibility: hidden;" id="dataShow">
-          <img alt="Cover-image" id="coverImage" width="200px" />
-          <button class="help" id="helpBtn">
-            Bisogno di aiuto?<a href="guide.html" id="guideBtn"></a>
-          </button>
-          <div id="images"></div>
+          </lord-icon>
+        </button>
+        <div class="alert-div">Copied!</div>
+        <div id="footer">
+          <div id="foot">
+            <a
+              class="btn btn-social-icon btn-instagram"
+              href="https://www.instagram.com/_leonardo.sartori_/"
+              style="background-color: transparent;"
+            >
+              <span class="fa fa-instagram" id="insta"></span>
+            </a>
+            <a
+              class="btn btn-social-icon btn-facebook"
+              href="https://facebook.com/leonardosartori34"
+            >
+              <span class="fa fa-facebook"></span>
+            </a>
+            <a
+              class="btn btn-social-icon btn-github"
+              href="https://github.com/leonardosartori-web"
+            >
+              <span class="fa fa-github"></span>
+            </a>
+          </div>
+          <span class="develop">Developed by<br /></span>
+          <span>Leonardo Sartori</span>
         </div>
       </div>
-      <div id="google_translate_element" class="translateBtn"></div>
-      <script
-        type="text/javascript"
-        src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
-      ></script>
-      <script type="text/javascript">
-        /*
+      <div id="main">
+        <span style="font-size: 30px; cursor: pointer;" id="openNav"
+          >&#9776;</span
+        >
+        <img
+          src="https://i.ibb.co/c8nsw0v/logo-large.png"
+          alt="Logo"
+          class="logo"
+        />
+        <div id="spotMessage">
+          <span> Promuovi la tua musica con <b>Musicme Smart URLs</b>. </span>
+        </div>
+        <div class="center" id="center">
+          <h1>
+            <h2 id="h1">Inserire dati validi</h2>
+          </h1>
+          <div style="visibility: hidden;" id="dataShow">
+            <img alt="Cover-image" id="coverImage" width="200px" />
+            <button class="help" id="helpBtn">
+              Bisogno di aiuto?<a href="guide.html" id="guideBtn"></a>
+            </button>
+            <div id="images"></div>
+          </div>
+        </div>
+        <div id="google_translate_element" class="translateBtn"></div>
+        <script
+          type="text/javascript"
+          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"
+        ></script>
+        <script type="text/javascript">
+          /*
         googleTranslateElementInit();
 
         function googleTranslateElementInit() {
@@ -121,9 +122,10 @@
             "google_translate_element"
           );
         }*/
-      </script>
+        </script>
+      </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="src/index.js"></script>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="src/index.js"></script>
   </body>
 </html>
